testcases/bindgen/146/error_message.txt
error[E0428]: the name `MAX` is defined multiple times
 --> ./open/146/generated_bindings.rs:6:1
  |
3 | pub const MAX: u32 = 1;
  | ----------------------- previous definition of the value `MAX` here
...
6 | pub const MAX: _bindgen_ty_1 = 2;
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `MAX` redefined here
  |
  = note: `MAX` must be defined only once in the value namespace of this module

warning: type `_bindgen_ty_1` should have an upper camel case name
 --> ./open/146/generated_bindings.rs:7:10
  |
7 | pub type _bindgen_ty_1 = ::std::os::raw::c_uint;
  |          ^^^^^^^^^^^^^ help: convert the identifier to upper camel case: `BindgenTy1`
  |
  = note: `#[warn(non_camel_case_types)]` on by default

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0428`.
